Feat: header 스크롤, sidebar 슬라이드 수정

--- a/src/main/resources/static/resource/css/sidebars.css
+++ b/src/main/resources/static/resource/css/sidebars.css
@@ -62,6 +62,14 @@ main {
   font-weight: bold;
 }
 
+.sidebar-container {
+  transform: translateX(-320px);
+  transition: all .5s;
+}
+.sidebarOpacity {
+  opacity: 0;
+}
 .sidebar {
-  display: none;
+  z-index: -1;
+  transition: all .5s;
 }
