--- a/src/main/resources/static/resource/css/main.css
+++ b/src/main/resources/static/resource/css/main.css
@@ -1,3 +1,11 @@
+header.active {
+  border-bottom: 1px solid gray;
+  background-color: #ffffff;
+  position: fixed !important;
+  width: 100%;
+  top: 0 !important;
+  height: 84px;
+}
 .category > a {
   width: 12.5%;
 }
@@ -16,13 +24,4 @@
 .searchForm {
   position: relative;
 }
-.sidebar-container {
-  transform: translateX(-320px);
-  transition: all 1s;
-}
-.sidebarOpacity {
-  opacity: 0;
-}
-/* .sidebar {
-  display: none;
-} */
+
