Feat: 변호사 후기 작성

--- a/src/main/resources/static/resource/css/review.css
+++ b/src/main/resources/static/resource/css/review.css
@@ -45,39 +45,12 @@
 }
 
 .rating {
-  display: flex;
-  flex-direction: row-reverse;
+  font-size: 0;
 }
 
-.rating > input {
-  display: none;
-}
-
-.rating > label {
-  position: relative;
-  width: 19px;
-  font-size: 25px;
-  color: #ffc107;
+.rating-star {
   cursor: pointer;
-}
-
-.rating > label::before {
-  content: "\2605";
-  position: absolute;
-  opacity: 0;
-}
-
-.rating > label:hover:before,
-.rating > label:hover ~ label:before {
-  opacity: 1 !important;
-}
-
-.rating > input:checked ~ label:before {
-  opacity: 1;
-}
-
-.rating:hover > input:checked ~ label:before {
-  opacity: 0.4;
+  display: inline-block;
 }
 
 .warning {
