--- a/src/main/resources/static/views/list.html
+++ b/src/main/resources/static/views/list.html
@@ -11,7 +11,7 @@
     <link href="../resource/css/headers.css" rel="stylesheet" />
     <link href="../resource/css/footer.css" rel="stylesheet" />
     <link href="../resource/css/sidebars.css" rel="stylesheet" />
-    <link href="../resource/css/common.css" rel="stylesheet" />
+    <link href="../resource/css/common.cbss" rel="stylesheet" />
 
     <link href="../resource/css/list.css" rel="stylesheet" />
   </head>
