변호사/고객 회원가입페이지 유효성검사.JG

--- a/src/main/resources/static/resource/css/sign-up.css
+++ b/src/main/resources/static/resource/css/sign-up.css
@@ -43,3 +43,30 @@ ul.join_box {
 .info-text {
     font-size: 14px !important;
 }
+.spinning {
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    color: #00d8ff;
+    top: 1830px;
+    left: 730px;
+}
+.fa-spinner {
+    width: 25px;
+    height: 25px;
+}
+.lawyerEmail,
+.lawyerId,
+.lawyerName,
+.lawyerPassword,
+.lawyerPasswordConfirm,
+.lawyerPhoneText1 {
+    opacity: 0;
+}
+.spinningDisplay{
+    display: none;
+}
+#sample6_extraAddress{
+    display: none;
+}
